--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -14,10 +14,10 @@
 	<key>CFBundleSignature</key>
 	<string>hook</string>
 	<key>CFBundleVersion</key>
-	<string>4.9</string>
+	<string>4.10</string>
 
 	<key>PlexPluginVersionUrl</key>
-	<string>https://go.kolsys.cf/1FuE3dz</string>
+	<string>https://api.github.com/repos/Helza/YouTubeTV.bundle/releases/latest</string>
 	<key>PlexPluginCodePolicy</key>
 	<string>Elevated</string>
 
